# picocalc_BIOS

./: .gitignore  Makefile  README.md
Core/Inc/: hal_interface.h  keyboard.h  regs.h  version.h
Core/Src/: axp2101.c  backlight.c  batt.c  eeprom.c  fifo.c  hal_interface.c  i2cs.c  keyboard.c  main.c  regs.c  rtc.c
CubeMX/: picocalc_BIOS_jcs.ioc
tests/: .gitignore  CMakeLists.txt  LICENSE  jcs_regs.h  main.c
tests/lcdspi/: CMakeLists.txt  lcdspi.c  lcdspi.h
tests/lcdspi/fonts/: battery_24x48.c
tests/pcsb/: CMakeLists.txt  kbd.c  kbd.h  pcsb.c  pcsb.h  pcsb_int.h  rtc.c  rtc.h
